Fixing pmd boolean warning